# stellar-router

./: .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  integration-tests-manual.yml  metrics-exporter.yml
api-server/: Cargo.toml  Dockerfile  README.md
api-server/src/: handlers.rs  main.rs  rpc.rs  state.rs  tests.rs  types.rs  websocket.rs
contracts/router-access/: Cargo.toml
contracts/router-access/src/: lib.rs
contracts/router-common/: Cargo.toml
contracts/router-common/src/: Cargo.toml  lib.rs
contracts/router-core/: Cargo.toml
contracts/router-core/src/: lib.rs
contracts/router-execution/: Cargo.toml
contracts/router-middleware/: Cargo.toml
contracts/router-multicall/: Cargo.toml
contracts/router-quote/: Cargo.toml
contracts/router-quote/src/: lib.rs
contracts/router-registry/: Cargo.toml
contracts/router-timelock/: Cargo.toml
docs/: metrics.md  plugin-system.md  sdk.md  signing-abstraction.md
integration-tests/: Cargo.toml
integration-tests/tests/: README.md  integration_tests.rs
integration-tests/tests/integration/: failure_scenarios.rs  full_flow_test.rs  mod.rs  testnet_setup.rs
metrics/: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  QUICKSTART.md  README.md  alerts.yml  docker-compose.yml  grafana-dashboard.json  prometheus.yml
metrics/src/: auth.rs  cli.rs  logging.rs  main.rs  metrics.rs  openapi.rs  rate_limit.rs  replay_protection.rs  rpc.rs  server.rs  validation.rs
scripts/: artillery-processor.js  load-test-artillery.sh  load-test.sh  run-integration-tests.sh
(+22 files in other folders)
